--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,11 +17,11 @@ jobs:
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           script: |
-            cd /var/www/itpark-sakhalin.ru
+            cd /var/www/ksa78.ru
             git pull origin master -Xtheirs
             npm install
             npm run client:install
             npm run client:build
-            pm2 stop itpark
+            pm2 stop ksa78
             service nginx restart
-            pm2 start itpark
+            pm2 start ksa78
