--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
     "react-transition-group": "^4.4.2",
+    "react-yandex-metrika": "^2.6.0",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.3.5",
     "uuid": "^8.3.2",
