--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@types/uuid": "^8.3.1",
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
+    "interweave": "^12.8.0",
     "node-sass": "^6.0.1",
     "normalize-css": "^2.3.1",
     "react": "^17.0.2",
