--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
   },
   "homepage": "https://github.com/E-Shangeraev/Malakhov#readme",
   "devDependencies": {
-    "@admin-bro/upload": "^1.3.1",
     "concurrently": "^6.2.0",
     "cross-env": "^7.0.3",
     "editorconfig-checker": "^4.0.2",
@@ -39,9 +38,10 @@
     "nodemon": "^2.0.9"
   },
   "dependencies": {
-    "@admin-bro/express": "^3.1.0",
-    "@admin-bro/mongoose": "^1.1.0",
-    "admin-bro": "^4.0.1",
+    "@adminjs/express": "^4.0.0",
+    "@adminjs/mongoose": "^2.0.0",
+    "@adminjs/upload": "^2.0.1",
+    "adminjs": "^5.2.1",
     "argon2": "^0.28.2",
     "connect-mongo": "^4.4.1",
     "dotenv": "^10.0.0",
